syntax = 'proto3';

package checkout;

option go_package = "https://gitlab.ozon.dev/sykuznetsov/homework-1/checkout/pkg/checkout_v1";



import "google/protobuf/empty.proto";


service checkout {

rpc addToCart(addToCartRequest) returns (google.protobuf.Empty);
rpc deleteFromCart(deleteFromCartRequest) returns (google.protobuf.Empty);
rpc listCart(listCartRequest) returns (listCartResponse);
rpc purchase(purchaseRequest) returns (purchaseResponse);

}

message addToCartRequest {
    int64 user = 1;
    uint32 sku = 2;
    uint32 count = 3; 
}

message deleteFromCartRequest {
    int64 user = 1;
    uint32 sku = 2;
    uint32 count = 3; 
}


message listCartRequest {
    int64 User = 1;
}

message ItemCart {
    uint32 SKU = 1;
    uint32 Count = 2;
    string Name = 3;
    uint32 Price = 4;
}

message listCartResponse {
    repeated ItemCart Items = 1;
    uint32 TotalPrice = 2;
}

message purchaseRequest {
    int64 User = 1;
}

message purchaseResponse {
    int64 OrderID = 1;
}

